<resources>
    <string name="app_name">GameNews</string>

    <!-- drawer_menu strings -->
    <string name="news">News</string>
    <string name="games">Games</string>
    <string name="leagueoflegends">lol</string>
    <string name="dota">overwatch</string>
    <string name="kaunter">csgo</string>
    <string name="settings">Settings</string>
    <string name="favoritos">Favourites</string>
    <string name="otros">More Options</string>

    <!-- drawer_header strings -->
    <string name="maxisun">Max Espinal</string>
    <string name="occupation">Ing. Informatica</string>

    <!-- drawer toggle strings -->
    <string name="open">Open</string>
    <string name="close">Close</string>

    <!-- login strings-->
    <string name="username">username</string>
    <string name="password">password</string>
    <string name="label_login">Sign in</string>
    <string name="sign_in_or_register">SIGN IN OR REGISTER</string>

    <!-- view noticias info de text views-->
    <string name="game">Game:</string>
    <string name="category">Category:</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="signout">Logout</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
</resources>
