<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/news_drawermenu_ID"
            android:icon="@drawable/icono_noticias"
            android:title="@string/news"/>
        <item
            android:id="@+id/games_drawermenu_ID"
            android:icon="@drawable/icono_games"
            android:title="@string/games"/>
        <item
            android:id="@+id/leaguelegends_drawermenu_ID"
            android:icon="@drawable/icono_bookmark"
            android:title="@string/leagueoflegends"/>
        <item
            android:id="@+id/dota_drawermenu_ID"
            android:icon="@drawable/icono_bookmark"
            android:title="@string/dota"/>
        <item
            android:id="@+id/csgo_drawermenu_ID"
            android:icon="@drawable/icono_bookmark"
            android:title="@string/kaunter"/>
    </group>

    <item android:title="prueba">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:icon="@drawable/icono_settings"
                    android:title="@string/settings"/>
                <item
                    android:icon="@drawable/icono_favourites"
                    android:title="@string/favoritos"/>
            </group>
        </menu>
    </item>

</menu>